# arabica

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  commands.gdb  vcpkg.sh
.github/workflows/: develop.yml
app/: main.cpp
arabica/cpu/: cpu.cpp  cpu.hpp  op_code.hpp
arabica/device/: delay.hpp  display.hpp  sound.hpp
arabica/driver/: delay.hpp  display.hpp  keypad.cpp  keypad.hpp  sound.hpp
arabica/emulator/: emulator.cpp  emulator.hpp
arabica/gpu/: gpu.cpp
arabica/memory/: memory.cpp  memory.hpp
arabica/rom/: rom.cpp  rom.hpp
arabica/thread/: thread.cpp  thread.hpp
arabica/type/: noncopyable.hpp
arabica/ui/: window.cpp  window.hpp
rom/: README.md
test/: test.cpp
test/cpu/: cpu_test_suite.cpp  cpu_test_suite.hpp
test/driver/: keypad_test_suite.hpp
test/memory/: memory_test_suite.cpp  memory_test_suite.hpp
